<resources>
  <string name="news">News</string>
  <string name="drawer_open">Open Drawer</string>
  <string name="drawer_close">Close Drawer</string>
  <string name="info">Info</string>
  <string name="events">Events</string>
  <string name="app_name" translatable="false">GDG</string>
  <string name="add_to_calendar">Add to calendar</string>
  <string name="share_with_googleplus">Share with Google+</string>
  <string name="no_scheduled_events">No events scheduled\nwithin the next 30 days</string>
  <string name="organizers">Organizers</string>
  <string name="resources">Links</string>
  <string name="fetch_events_failed">Could not fetch upcoming events</string>
  <string name="fetch_chapters_failed">Could not fetch chapter list</string>
  <string name="bogus_organizer">Could not parse Organizer Id: %1$s</string>
  <string name="cached_content">You\'re currently offline. Here\'s some cached content.</string>
  <string name="offline_alert">You\'re currently offline.</string>
  <string name="welcome">Welcome.</string>
  <string name="choose_home_gdg">Choose your home GDG</string>
  <string name="signin_with_google">Sign-in with Google</string>
  <string name="confirm">Confirm</string>
  <string name="signin_description">The GDG App integrates with Google+ and other Google Services. To use these function we need you to be signed into Google.</string>
  <string name="or">or</string>
  <string name="skip">Skip Sign-in</string>
  <string name="youtube_init_failed">YouTube Player could not be initialized.</string>
  <string name="achievements">Achievements</string>
  <string name="settings">Settings</string>
  <string name="about">About</string>
  <plurals name="seconds_ago">
    <item quantity="zero">now</item>
    <item quantity="one">just now</item>
    <item quantity="other">%d seconds ago</item>
  </plurals>
  <plurals name="minutes_ago">
    <item quantity="zero">now</item>
    <item quantity="one">1 minute ago</item>
    <item quantity="other">%d minutes ago</item>
  </plurals>
  <plurals name="hours_ago">
    <item quantity="zero">now</item>
    <item quantity="one">1 hour ago</item>
    <item quantity="other">%d hours ago</item>
  </plurals>
  <plurals name="days_ago">
    <item quantity="zero">now</item>
    <item quantity="one">1 day ago</item>
    <item quantity="other">%d days ago</item>
  </plurals>
  <string name="contributors">The GDG app is a community effort and open sourced. The following people contributed to the app:</string>
  <string name="get_involved">Get Involved!</string>
  <string name="get_involved_text">The GDG app is a community effort and open sourced. Everyone is welcome to participate and improve this app.\n\nJust head over to GitHub and checkout our code.\n\nhttps://github.com/gdg-x</string>
  <string name="about_license">© 2013 The GDG Frisbee Project\nAll Rights reserved.\n\nLicensed under the terms\nof the Apache 2.0 License</string>
  <string name="past_event">PAST</string>
  <string name="upcoming_widget">GDG - Upcoming Event</string>
  <string name="global">Global</string>
  <string name="pulse">GDG Pulse</string>
  <string name="pulse_events">Events</string>
  <string name="pulse_attendees">Attendees</string>
  <string name="pulse_circlers">Chapter Circlers</string>
  <string name="home_gdg">Home GDG</string>
  <string name="home_gdg_with_city">Home GDG: %1$s</string>
  <string name="home_gdg_summary">Select your primary GDG</string>
  <string name="remove_trailing_spaces">Please remove trailing spaces</string>
  <string name="analytics">Analytics</string>
  <string name="analytics_summary_on">The app currently transmits anonymous usage data which allows us to improve the app</string>
  <string name="analytics_summary_off">The app currently does not transmit any anonymous usage data</string>
  <string name="gcm">Cloud Notifications</string>
  <string name="gcm_summary_on">The app currently receives and processes GDG Cloud Notification</string>
  <string name="gcm_summary_off">The app currently does not receive GDG Cloud Notification</string>
  <string name="google_signed_in">Signed into Google+</string>
  <string name="google_signed_in_on">You are currently signed in with Google+</string>
  <string name="google_signed_in_off">You are not signed in</string>
  <string name="achievements_need_signin">You need to be logged in to unlock achievements</string>
  <string name="done">Done</string>
  <string name="allow_analytics">Allow us to collect anonymous usage data which helps us to improve the app</string>
  <string name="enable_gcm">Enable GDG Cloud Notifications (get notified about new Events)</string>
  <string name="step3_text">One more thing before we start…</string>
  <string name="share_on_gplus">Invite Friends</string>
  <string name="join_me">Join me at this event!</string>
  <string name="name_not_known">Name not known</string>
  <string name="originally_shared">originally shared:</string>
  <string name="server_error">An error occurred. Try again.</string>
  <string name="search_hint">Search GDG Chapter</string>
  <string name="dashclock_description">Display information about the next upcoming event at your Home GDG</string>
  <string name="order_by_date">Sort by date</string>
  <string name="order_by_distance">Sort by distance</string>
  <string name="gcm_event_ticker">A new event at your home GDG has been scheduled.</string>
  <string name="ioextended_description">Google I/O Extended is about joining the Google conference at your local group.</string>
  <string name="gcpnext_description">GCP NEXT Extended events bring the local developer community together to experience talks, in-depth product demos, and behind-the-scenes interviews. All keynote and technical sessions will be available on-line for time-shifted viewing. The event can also offer other unique activities for developers, such cloud codelabs or hackathons.</string>
  <string name="devfest_description">GDG DevFests are large, community-run events that can offer speaker sessions across multiple product areas, all-day hack-a-thons, code labs, and more.\n\nEach GDG DevFest will be inspired by and uniquely tailored to the needs of the developer community that hosts it. While no two events will be exactly alike, each GDG DevFest will, at its core, be powered by a shared belief that when developers come together to exchange ideas, amazing things can happen.</string>
  <string name="studyjams_description">Google Developers Study Jams is a free series of global, community–run, in–person study groups. The first Study Jams series is presented in partnership with Udacity and will follow their Android Fundamentals curriculum. Google Developer Group facilitators certified in the course will lead the Study Jams that meet once weekly for 8 – 9 weeks.</string>
  <string name="wtm_description">Women Techmakers is Google\'s global program and brand for women in technology. Kicked off in 2012 by then VP of Google[x] Megan Smith, Women Techmakers is now led by Women in Technology Advocate Natalie Villalobos and a global team of Googlers who are passionate about empowering women in technology through increased visibility, community, and resources.\n\nEach of our summits and meetups will be catered to local communities of women in technology. Summits and meetups around the world may feature hands-on coding workshops, inspiring speakers, and networking opportunities.\n\nAll events will occur within the month of March.</string>
  <string name="ioextended" translatable="false">Extended 2016</string>
  <string name="gcpnext" translatable="false">GCP NEXT 2016</string>
  <string name="devfest" translatable="false">DevFest 2016</string>
  <string name="wtm" translatable="false">Women Techmakers</string>
  <string name="studyjams" translatable="false">Android Study Jams</string>
  <string name="media_route_menu_title">Cast session</string>
  <string name="navigate_to">Navigate to event</string>
  <string name="gde">Google Developer Experts</string>
  <string name="fetch_gde_failed">Could not fetch GDE Directory…</string>
  <string name="gde_who_title">Who are Google Developer Experts?</string>
  <string name="gde_who_desc">Google Developer Experts (GDEs) are experts in one or more Google developer technologies. The GDE program recognizes the exemplary work done by these rock stars for the Google Developers worldwide by inviting them to be part of the growing GDE community. GDEs are gurus, mentors and friends; they are developers just like you.\n\nGoogle Developers Experts speak in local and global events, have a strong online presence and an excellent technical background in their field. These independent developers bring their real-world experience and knowledge working with Google technologies to developer communities worldwide.</string>
  <string name="gde_what_title">What kind of activities do GDEs do?</string>
  <string name="gde_what_desc">GDEs write code and launch apps; they open source as much as possible of the code they write to benefit other developers. They have written and continue to write blog posts, articles, documentation, books, etc. about development on the Google platform.\n\nThey also translate existing documentation into other languages to benefit local developers. GDEs have high reps on forums like Stack Overflow and are top contributors on product mailing lists.\n\nThey speak at developer conferences, organize and lead GDGs, and conduct hackathons. GDEs can be nominated for the program for doing one or more types of activities for a product. Once they are accepted as a GDE, they are expected to continue contributing in any of the ways listed above.</string>
  <string name="arrow_oops">Uh oh, something went wrong. Please try again.</string>
  <string name="arrow_stale">Uh oh, that code has expired. Try again.</string>
  <string name="arrow_scan">Ready to Scan!\nGo find a GDG Organizer\nand ask nicely if you may \"tag\" him/her</string>
  <string name="arrow_organizer">Hey, it seems you are a GDG Organizer. Switch to Send Mode here if you want to allow someone to \"tag\" you.</string>
  <string name="arrow_send_mode">Send Mode</string>
  <string name="arrow_tag_here">Touch NFC phones and tap to fire off the arrow!</string>
  <string name="arrow_back_receive">Back to Tag Mode</string>
  <string name="arrow_already_tagged">Shoot! You already tagged this Organizer!</string>
  <string name="arrow">Arrow</string>
  <string name="arrow_need_games">You need to be logged in to play GDG Arrow</string>
  <string name="arrow_selfie">You really can not tag yourself. Sorry ;)</string>
  <string name="arrow_leaderboard">Best of Arrow</string>
  <string name="no_nfc_use_qr_scanner">No NFC detected, use QR scanner!</string>
  <string name="event_description">Description</string>
  <string name="event">Event</string>
  <string name="no_description_available"><![CDATA[<i>No description available.</i>]]></string>
  <string name="starting_at">Starting at %1$s</string>
  <string name="loading_data_failed">Couldn\'t load event list..</string>
  <string name="share">Share</string>
  <string name="open_event_site">View event page</string>
  <string name="arrow_tagged">Your tagged Organizers</string>
  <string name="get_involved_translation_text">If you like to contribute to the localization of the app, i.e. translate to a new language or improve existing ones, please goto the crowdin page at\n\nhttps://crowdin.com/project/gdgx-frisbee</string>
  <string name="about_about">About</string>
  <string name="about_contributors">Contributors</string>
  <string name="about_translators">Translators</string>
  <string name="about_changelog">Changelog</string>
  <string name="about_get_involved">Get Involved</string>
  <string name="about_third_party_libraries">3rd Party Libraries</string>
  <string name="event_info">Info</string>
  <string name="help">Help</string>
  <string name="feedback">Feedback</string>
  <string name="fork_me">Fork me</string>
</resources>