<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/CardView.Default">

    <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip">

        <TextView
          android:id="@+id/textView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/get_involved"
          android:textStyle="bold" />

        <TextView
          android:id="@+id/textView1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dip"
          android:autoLink="all"
          android:text="@string/get_involved_text" />

        <TextView
          android:id="@+id/textView2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dip"
          android:autoLink="all"
          android:text="@string/get_involved_translation_text" />
      </LinearLayout>
    </ScrollView>
  </android.support.v7.widget.CardView>

  <ImageView
    android:id="@+id/forkMe"
    android:contentDescription="@string/fork_me"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_alignParentRight="true"
    android:src="@drawable/forkme_right"
    android:elevation="4dp"/>
</RelativeLayout>