<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/cloud"
  android:orientation="vertical">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:padding="50dip">

    <TextView
      android:id="@+id/textView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="20dip"
      android:gravity="center_horizontal"
      android:linksClickable="false"
      android:singleLine="false"
      android:text="@string/signin_description"
      android:textAppearance="@android:style/TextAppearance.Large"
      android:textColor="@color/asbestos"
      android:textIsSelectable="false" />

    <Button
      android:id="@+id/googleSignin"
      style="@style/GoogleSignIn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginBottom="15dip"
      android:background="@drawable/btn_g_signin"
      android:text="@string/signin_with_google" />

    <TextView
      android:id="@+id/textView1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="15dip"
      android:autoText="false"
      android:gravity="center_horizontal"
      android:linksClickable="false"
      android:phoneNumber="false"
      android:singleLine="false"
      android:text="@string/or"
      android:textAppearance="@android:style/TextAppearance.Large"
      android:textColor="@color/asbestos"
      android:textIsSelectable="false" />

    <Button
      android:id="@+id/skipSignin"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/skip" />
  </LinearLayout>

  <ImageView
    android:id="@+id/imageView"
    android:layout_width="match_parent"
    android:layout_height="15dip"
    android:contentDescription="@null"
    android:background="@drawable/googly_bar" />
</LinearLayout>