<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="@style/Widget.GDG.CardView">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/keyline_1">

        <TextView
          android:id="@+id/textView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingBottom="10dip"
          android:text="@string/gde_who_title"
          android:textAppearance="?android:attr/textAppearanceMedium"
          android:textStyle="bold" />

        <TextView
          android:id="@+id/textView2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/gde_who_desc" />
      </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="@style/Widget.GDG.CardView">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/keyline_1">

        <TextView
          android:id="@+id/textView3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingBottom="@dimen/keyline_1"
          android:text="@string/gde_what_title"
          android:textAppearance="?android:attr/textAppearanceMedium"
          android:textStyle="bold" />

        <TextView
          android:id="@+id/textView4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/gde_what_desc" />
      </LinearLayout>
    </android.support.v7.widget.CardView>
  </LinearLayout>
</ScrollView>