<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/cloud"
  android:orientation="vertical">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:padding="50dip">

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dip"
        android:src="@drawable/ic_analytics" />

      <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_gcm" />
    </LinearLayout>

    <TextView
      android:id="@+id/textView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="20dip"
      android:gravity="center_horizontal"
      android:linksClickable="false"
      android:singleLine="false"
      android:text="@string/step3_text"
      android:textAppearance="@android:style/TextAppearance.Large"
      android:textColor="@color/asbestos"
      android:textIsSelectable="false" />

    <LinearLayout
      android:id="@+id/analyticsContainer"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <CheckBox
        android:id="@+id/enable_analytics"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:checked="true"
        android:text="@string/allow_analytics"
        android:textColor="@color/asbestos"
        android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
      android:id="@+id/gcmContainer"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dip"
      android:orientation="horizontal">

      <CheckBox
        android:id="@+id/enable_gcm"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:checked="true"
        android:text="@string/enable_gcm"
        android:textColor="@color/asbestos"
        android:textSize="18sp" />
    </LinearLayout>

    <Button
      android:id="@+id/complete"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="25dip"
      android:text="@string/done" />
  </LinearLayout>
</LinearLayout>
