<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2013-2015 The GDG Frisbee Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ 	http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->

<android.support.v4.widget.DrawerLayout
  android:id="@+id/drawer"
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_actionbar" />

    <ViewFlipper
      android:id="@+id/viewFlipper"
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <LinearLayout
        android:id="@+id/scanReady"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
          android:id="@+id/imageView"
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_gravity="center"
          android:layout_marginTop="10dip"
          android:layout_weight="1"
          android:scaleType="fitCenter"
          android:src="@drawable/arrow_tagf" />

        <TextView
          android:id="@+id/textView"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center_vertical|center_horizontal"
          android:padding="30dip"
          android:text="@string/arrow_scan"
          android:textStyle="bold" />

        <LinearLayout
          android:id="@+id/organizerOnly"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:padding="15dip"
          android:visibility="gone">

          <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/arrow_organizer" />

          <Button
            android:id="@+id/switchToSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/arrow_send_mode" />
        </LinearLayout>
      </LinearLayout>

      <LinearLayout
        android:id="@+id/sendMode"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">

        <ImageView
          android:id="@+id/organizerPic"
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_gravity="center"
          android:layout_weight="1"
          android:scaleType="fitCenter" />

        <TextView
          android:id="@+id/textView2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:gravity="center_vertical|center_horizontal"
          android:padding="30dip"
          android:text="@string/arrow_tag_here"
          android:textAppearance="@android:style/TextAppearance.Large"
          android:textStyle="bold" />

        <Button
          android:id="@+id/switchToTag"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="30dip"
          android:text="@string/arrow_back_receive" />
      </LinearLayout>
    </ViewFlipper>
  </LinearLayout>

  <ListView
    android:id="@+id/left_drawer"
    android:layout_width="240dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="#111"
    android:choiceMode="singleChoice"
    android:divider="@android:color/transparent"
    android:dividerHeight="0dp" />
</android.support.v4.widget.DrawerLayout>
