<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/cloud"
  android:orientation="vertical">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="25dip"
      android:orientation="vertical"
      android:paddingBottom="5dip"
      android:paddingLeft="15dip"
      android:paddingRight="5dip"
      android:paddingTop="5dip">

      <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:linksClickable="false"
        android:singleLine="true"
        android:text="@string/welcome"
        android:textColor="@color/asbestos"
        android:textIsSelectable="false"
        android:textSize="24dip" />

      <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:linksClickable="false"
        android:singleLine="true"
        android:text="@string/choose_home_gdg"
        android:textColor="@color/asbestos"
        android:textIsSelectable="false"
        android:textSize="24dip" />
    </LinearLayout>

    <org.gdg.frisbee.android.view.ResizableImageView
      android:id="@+id/imageView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:adjustViewBounds="true"
      android:background="@drawable/gdg_world" />

    <ViewSwitcher
      android:id="@+id/viewSwitcher"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="15dip"
      android:inAnimation="@anim/fade_in"
      android:outAnimation="@anim/fade_out">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ProgressBar
          android:id="@+id/progressBar"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:indeterminate="true"
          android:indeterminateOnly="true" />
      </LinearLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Spinner
          android:id="@+id/chapter_spinner"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" />

        <Button
          android:id="@+id/confirm"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/confirm" />
      </LinearLayout>
    </ViewSwitcher>
  </LinearLayout>

  <ImageView
    android:id="@+id/imageView1"
    android:layout_width="match_parent"
    android:layout_height="15dip"
    android:background="@drawable/googly_bar" />
</LinearLayout>